# rapido

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conftest.py  manage.py  pyproject.toml  whitepaper.md
.claude/: settings.json
.github/workflows/: ci.yml
config/: countries.py  currencies.py  languages.py  urls.py
config/settings/: base.py  dev.py  prod.py
core/: admin.py  decorators.py  i18n.py  managers.py  middleware.py  models.py  urls.py  validators.py  views.py
core/forms/: auth.py  invitation.py  location.py  member.py  organization.py  profile.py  signup.py
core/migrations/: 0001_initial.py  0002_organizationmembership.py  0003_location_locationmembership.py  0004_invitation.py  0005_alter_location_slug_alter_organization_slug.py
core/models/: __init__.py  base.py  invitation.py  location.py  membership.py  organization.py  user.py
core/services/: activation.py  exceptions.py  invitation.py  location.py  login_redirect.py  mail.py  membership.py  password_reset.py  profile.py  resend.py  signup.py  tokens.py
core/templatetags/: forms.py  icons.py  org_switcher.py
core/utils/: ids.py
core/views/: __init__.py  auth.py  dashboard.py  design.py  invitations.py  locations.py  members.py  organization.py  pos.py  profile.py  settings.py
docs/: design-philosophy.md  epic-2a-design-foundation.md  epic-2b-onboarding.md  epic-2c-management.md
docs/plans/: manual-qa-frontend.md
docs/reports/: manual-qa-frontend-2026-05-03.md
locale/: README.md
scripts/: tenant_lint.py
static/css/: brand.css
templates/: _base.html  base.html  base_org.html  base_picker.html  base_public.html  home.html  index.html
templates/_partials/: flash.html  icon.html  lang_switcher.html  (+5 more)
tests/: factories.py  test_auth_login_redirect.py  test_auth_org_picker.py  test_auth_password_reset.py  test_auth_signup.py  test_auth_verify.py  test_core_admin.py  test_core_decorators.py  test_core_location.py  test_core_location_membership.py  test_core_managers.py  test_core_membership.py  test_core_middleware.py  test_core_models.py  test_core_services_activation.py  test_core_services_invitation.py  test_core_services_login_redirect.py  test_core_services_mail.py  test_core_services_membership.py  test_core_services_profile.py  test_core_services_signup.py  test_core_services_tokens.py  test_core_user.py  test_design_partials.py  test_design_shells.py  test_email_invitation.py  test_factories.py  test_forms_templatetags.py  test_i18n.py  test_ids.py  test_invitation_model.py  test_org_switcher.py  test_role_fixtures.py  test_smoke.py  test_views_dashboard.py  test_views_invitations.py  test_views_locations.py  test_views_members.py  test_views_organization.py  test_views_pos.py  (+1 more)
(+62 files in other folders)
